# podman-decompose

./: README.md  setup.cfg
podman_decompose/: cli.py  decompose.py  util.py
