[metadata]
name = podman-decompose
long_description = file: README.md
long_description_content_type = text/x-markdown
url = https://github.com/zmc/podman-decompose
author = Zack Cerza
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description_content_type = text/x-rst; charset=UTF-8
description_file = README.rst
keywords = podman, docker, docker-compose
summary = Convert docker-compose files into podman commands

[options]
packages = find:
install_requires =
    pre-commit
    PyYAML
python_requires = >=3.6

[options.entry_points]
console_scripts =
    podman-decompose = podman_decompose.cli:main

[options.extras_require]
test =
    pytest
